added List and much much more...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(Index)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Index main.cc)
+add_executable(Index main.cc Index/Include/Include_Index/index_impl/ui/ui.cc)
 
 add_subdirectory(Index)
