--- a/Index/Include/Include_Index/CMakeLists.txt
+++ b/Index/Include/Include_Index/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(IndexInclude STATIC
         index_macros_end
         index_ui
         index_ui_macros
-        index_ui_macros_end index_impl/core/include.cc)
+        index_ui_macros_end)
 
 add_subdirectory(index_impl)
 
