--- a/Index/Include/Include_Index/index_impl/core/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/core/CMakeLists.txt
@@ -1,3 +1,8 @@
 target_sources(IndexInclude PRIVATE
         include.cc
-        types.cc)
+        types.cc
+        color/color.cc
+        colors/colors.cc
+        rect/rect.cc
+        size/size.cc
+        vector/vector.cc)
