--- a/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
@@ -1,4 +1,6 @@
 target_sources(IndexInclude PRIVATE
         include.cc
         func/func.cc
-        memory/memory.cc)
+        memory/memory.cc
+        nullable/nullable.cc
+        vector/vector.cc)
