--- a/Index/Include/Include_Index/index_impl/ui/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/ui/CMakeLists.txt
@@ -1,1 +1,5 @@
-target_sources(Index PRIVATE include.cc)
+target_sources(Index PRIVATE
+        include.cc
+        ui.cc
+        macros/index_ui_macros.cc
+        macros/index_ui_macros_end.cc)
