added String type

--- a/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
@@ -3,4 +3,5 @@ target_sources(IndexInclude PRIVATE
         func/func.cc
         memory/memory.cc
         nullable/nullable.cc
+        string/string.cc
         vector/vector.cc)
