--- a/Index/Lib/ImGui/CMakeLists.txt
+++ b/Index/Lib/ImGui/CMakeLists.txt
@@ -1,17 +1,15 @@
-# target_sources(Index PRIVATE
-#         "Impl/imconfig.h"
-#         "Impl/imgui.h"
-#         "Impl/imgui.cpp"
-#         "Impl/imgui_demo.cpp"
-#         "Impl/imgui_draw.cpp"
-#         "Impl/imgui_impl_dx9.h"
-#         "Impl/imgui_impl_dx9.cpp"
-#         "Impl/imgui_impl_dx10.h"
-#         "Impl/imgui_impl_dx10.cpp"
-#         "Impl/imgui_impl_dx11.h"
-#         "Impl/imgui_impl_dx11.cpp"
-#         "Impl/imgui_impl_dx12.h"
-#         "Impl/imgui_impl_dx12.cpp"
-#         "Impl/imgui_internal.h"
-#         "Impl/imgui_tables.cpp"
-#         "Impl/imgui_widgets.cpp")
+add_library(ImGui STATIC
+        Impl/imconfig.h
+        Impl/imgui.h
+        Impl/imgui.cpp
+        Impl/imgui_demo.cpp
+        Impl/imgui_draw.cpp
+        Impl/imgui_internal.h
+        Impl/imgui_tables.cpp
+        Impl/imgui_widgets.cpp
+        Impl/imstb_rectpack.h
+        Impl/imstb_textedit.h
+        Impl/imstb_truetype.h
+        Impl/backends/imgui_impl_dx9.h
+        Impl/backends/imgui_impl_dx9.cpp)
+target_include_directories(ImGui PUBLIC "Impl")
