--- a/Index/Lib/ImGui/CMakeLists.txt
+++ b/Index/Lib/ImGui/CMakeLists.txt
@@ -11,5 +11,7 @@ add_library(ImGui STATIC
         Impl/imstb_textedit.h
         Impl/imstb_truetype.h
         Impl/backends/imgui_impl_dx9.h
-        Impl/backends/imgui_impl_dx9.cpp)
+        Impl/backends/imgui_impl_dx9.cpp
+        Impl/backends/imgui_impl_win32.h
+        Impl/backends/imgui_impl_win32.cpp)
 target_include_directories(ImGui PUBLIC "Impl")
