--- a/Index/Include/Include_Index/index_impl/core/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/core/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(IndexInclude PRIVATE
         include.cc
         types.cc
+        alignment/alignment.cc
         color/color.cc
         colors/colors.cc
         rect/rect.cc
