changed UI system

--- a/Index/Include/Include_Index/index_impl/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(core)
-add_subdirectory(fix)
+add_subdirectory(include)
 add_subdirectory(macros)
+add_subdirectory(memory)
 add_subdirectory(std)
 add_subdirectory(ui)
 
