--- a/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(IndexInclude PRIVATE
         include.cc
         func/func.cc
+        limits/limits.cc
         memory/memory.cc
         nullable/nullable.cc
         stack/stack.cc
