added stackalloc and Span and more...

--- a/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(IndexInclude PRIVATE
         limits/limits.cc
         memory/memory.cc
         nullable/nullable.cc
+        span/span.cc
         stack/stack.cc
         string/string.cc
         vector/vector.cc)
