--- a/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(IndexInclude PRIVATE
         include.cc
         func/func.cc
         limits/limits.cc
+        math/math.cc
         memory/memory.cc
         nullable/nullable.cc
         span/span.cc
