updated UILayout and LayoutUtils and so much more...

--- a/Index/Include/Include_Index/index_impl/ui/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/ui/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory(notification)
 target_sources(Index PRIVATE
         include.cc
         ui.cc
+        ui_std.cc
         macros/index_ui_macros.cc
         macros/index_ui_macros_end.cc)
