Fixed Bugs, Added Dock, Added Container

--- a/Index/Include/Include_Index/CMakeLists.txt
+++ b/Index/Include/Include_Index/CMakeLists.txt
@@ -8,6 +8,9 @@ add_library(IndexInclude STATIC
 
 add_subdirectory(index_impl)
 
+# Include Boost
+
+# Include ImGui
 target_link_libraries(IndexInclude PUBLIC ImGui)
 
 target_link_libraries(Index PUBLIC IndexInclude)
