--- a/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
@@ -8,5 +8,6 @@ target_sources(IndexInclude PRIVATE
         span/span.cc
         stack/stack.cc
         string/string.cc
+        thread/thread.cc
         variant/variant.cc
         vector/vector.cc)
