updated CMake Lists

--- a/Index/Include/CMakeLists.txt
+++ b/Index/Include/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_subdirectory(Include_Index)
+
+target_link_libraries(Index PUBLIC IndexInclude)
+target_include_directories(Index PUBLIC Include_Index/)
