--- a/Index/Include/Include_Index/index_impl/ui/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/ui/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory(ImUI)
 add_subdirectory(notification)
 
-target_sources(Index PRIVATE
+target_sources(IndexInclude PRIVATE
         include.cc
         ui.cc
         ui_std.cc
