--- a/Index/Include/Include_Index/index_impl/ui/notification/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/ui/notification/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(Index PRIVATE
+target_sources(IndexInclude PRIVATE
         include.cc
         notification.cc
         notifications.cc)
