--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Index)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(Index_IncludeDir "Index/Include/Include_Index/")
+set(Index_IncludeDir PUBLIC "Index/Include/Include_Index/")
 
 add_library(Index STATIC index.cc)
 
