added Console support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
 set(Index_IncludeDir "Index/Include/Include_Index/")
 
-add_library(Index OBJECT index.cc)
+add_executable(IndexTest index.cc)
 
-target_include_directories(Index PUBLIC ${Index_IncludeDir})
-target_link_libraries(Index PUBLIC IndexInclude)
+target_include_directories(IndexTest PUBLIC ${Index_IncludeDir})
