added Index::Format and INDEX_Cpp20

--- a/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(IndexClient PRIVATE
         include.cc
         consteval/consteval.cc
-        property/property.cc)
+        property/property.cc
+        version/version.cc)
