--- a/Index/Include/Include_Index/index_impl/time/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/time/CMakeLists.txt
@@ -1,2 +1,4 @@
 target_sources(IndexInclude PRIVATE
-        include.cc)
+        include.cc
+        timepoint/timepoint.cc
+        timespan/timespan.cc)
