fully functional and fixed time sdk

--- a/Index/Include/Include_Index/index_impl/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/CMakeLists.txt
@@ -5,6 +5,7 @@ add_subdirectory(include)
 add_subdirectory(macros)
 add_subdirectory(memory)
 add_subdirectory(std)
+add_subdirectory(time)
 add_subdirectory(ui)
 
 target_sources(IndexInclude PRIVATE include.cc)
