added easing functions

--- a/Index/Include/Include_Index/index_impl/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(animation)
 add_subdirectory(core)
+add_subdirectory(easing)
 add_subdirectory(helpers)
 add_subdirectory(include)
 add_subdirectory(macros)
