started Working on IAnimation and ITransition

--- a/Index/Include/Include_Index/index_impl/animation/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/animation/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_subdirectory(animations)
 
 target_sources(IndexInclude PRIVATE
-        include.cc)
+        include.cc
+        animation.cc
+        transition.cc)
