--- a/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
@@ -1,5 +1,6 @@
 target_sources(IndexClient PRIVATE
         include.cc
+        compiler/compiler.cc
         consteval/consteval.cc
         property/property.cc
         version/version.cc)
