--- a/Index/Include/Include_Index/CMakeLists.txt
+++ b/Index/Include/Include_Index/CMakeLists.txt
@@ -1,10 +1,7 @@
 add_library(IndexInclude OBJECT
         index
         index_macros
-        index_macros_end
-        index_ui
-        index_ui_macros
-        index_ui_macros_end)
+        index_macros_end)
 
 add_subdirectory(index_impl)
 
