--- a/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
@@ -2,5 +2,6 @@ target_sources(IndexClient PRIVATE
         include.cc
         compiler/compiler.cc
         consteval/consteval.cc
+        overload/overload.cc
         property/property.cc
         version/version.cc)
