--- a/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(IndexClient PRIVATE
         include.cc
         compiler/compiler.cc
         consteval/consteval.cc
+        format/format.cc
         overload/overload.cc
         property/property.cc
         version/version.cc)
