added Debug added configuration.cc (INDEX_DEBUG / INDEX_RELEASE)

--- a/Index/Include/Include_Index/index_impl/core/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/core/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(IndexInclude PRIVATE
         color/color.cc
         colors/colors.cc
         console/console.cc
+        debug/debug.cc
         event/event.cc
         rect/rect.cc
         size/size.cc
