--- a/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(IndexClient PRIVATE
         include.cc
         compiler/compiler.cc
+        configuration/configuration.cc
         consteval/consteval.cc
         format/format.cc
         overload/overload.cc
