improved Index::String and added Index::Version

--- a/Index/Include/Include_Index/index_impl/core/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/core/CMakeLists.txt
@@ -9,4 +9,5 @@ target_sources(IndexInclude PRIVATE
         event/event.cc
         rect/rect.cc
         size/size.cc
-        vector/vector.cc)
+        vector/vector.cc
+        version/version.cc)
