fixed warnings, made linux ready, fixed throw errors, added INDEX_THROW

--- a/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(IndexClient PRIVATE
         compiler/compiler.cc
         configuration/configuration.cc
         consteval/consteval.cc
+        errors/errors.cc
         format/format.cc
         overload/overload.cc
         property/property.cc
