--- a/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/helpers/CMakeLists.txt
@@ -6,5 +6,6 @@ target_sources(IndexClient PRIVATE
         errors/errors.cc
         format/format.cc
         overload/overload.cc
+        platform/platform.cc
         property/property.cc
         version/version.cc)
