--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
-cmake_minimum_required(VERSION 3.19)
+cmake_minimum_required(VERSION 3.18.3)
 project(Index)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
 add_executable(IndexTest index.cc)
+
+target_compile_options(IndexTest PUBLIC "-fdeclspec")
 
 # Include Dirs
 set(Index_IncludeDir "Index/Include/Include_Index/")
