--- a/Index/Include/Include_IndexUI/CMakeLists.txt
+++ b/Index/Include/Include_IndexUI/CMakeLists.txt
@@ -3,4 +3,6 @@ add_library(IndexUIInclude OBJECT
         index_ui_macros
         index_ui_macros_end)
 
+target_include_directories("../Include_Index/")
+
 add_subdirectory(index_ui_impl)
