--- a/Index/Include/Include_Index/index_impl/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/CMakeLists.txt
@@ -7,6 +7,6 @@ add_subdirectory(macros)
 add_subdirectory(memory)
 add_subdirectory(std)
 add_subdirectory(time)
-add_subdirectory(ui)
+# add_subdirectory(ui)
 
 target_sources(IndexInclude PRIVATE include.cc)
