--- a/Index/Include/Include_IndexUI/index_ui_impl/ui/CMakeLists.txt
+++ b/Index/Include/Include_IndexUI/index_ui_impl/ui/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(IndexUIInclude PRIVATE
         
         element/element.cc
         mapper/mapper.cc
+        touchelement/touchelement.cc
 
         macros/index_ui_macros.cc
         macros/index_ui_macros_end.cc)
