addd providers, added and implemented UITouchElement, and so much more

--- a/Index/Include/Include_IndexUI/index_ui_impl/ui/CMakeLists.txt
+++ b/Index/Include/Include_IndexUI/index_ui_impl/ui/CMakeLists.txt
@@ -3,7 +3,10 @@ target_sources(IndexUIInclude PRIVATE
         ui.cc
         
         element/element.cc
+        inputelement/inputelement.cc
         mapper/mapper.cc
+        provider/iprovider.cc
+        provider/provider.cc
         touchelement/touchelement.cc
 
         macros/index_ui_macros.cc
