fixed compile error, updated UI system

--- a/Index/Include/Include_IndexUI/index_ui_impl/ui_std/CMakeLists.txt
+++ b/Index/Include/Include_IndexUI/index_ui_impl/ui_std/CMakeLists.txt
@@ -4,5 +4,6 @@ target_sources(IndexUIInclude PRIVATE
         
         container/conatiner.cc
         hstack/hstack.cc
-        stack/stack.cc
+        switcher/switcher.cc
+        ustack/ustack.cc
         vstack/vstack.cc)
