started working on scope searching

--- a/Index/Include/Include_IndexUI/index_ui_impl/ui/CMakeLists.txt
+++ b/Index/Include/Include_IndexUI/index_ui_impl/ui/CMakeLists.txt
@@ -11,6 +11,8 @@ target_sources(IndexUIInclude PRIVATE
         provider/provider.cc
         root/iroot.cc
         root/root.cc
+        scope/iscope.cc
+        scope/scope.cc
         touchelement/touchelement.cc
 
         macros/index_ui_macros.cc
