added UIScope, IUIScope; started working on UIElement->Search

--- a/Index/Include/Include_IndexUI/index_ui_impl/ui/CMakeLists.txt
+++ b/Index/Include/Include_IndexUI/index_ui_impl/ui/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(IndexUIInclude PRIVATE
         animation/animation.cc
         element/element.cc
         mapper/mapper.cc
+        path/path.cc
         provider/iprovider.cc
         provider/provider.cc
         root/iroot.cc
