--- a/Index/Include/Include_IndexUI/index_ui_impl/ui_std/CMakeLists.txt
+++ b/Index/Include/Include_IndexUI/index_ui_impl/ui_std/CMakeLists.txt
@@ -2,8 +2,9 @@ target_sources(IndexUIInclude PRIVATE
         include.cc
         ui.cc
         
-        container/conatiner.cc
+        container/container.cc
         hstack/hstack.cc
+        scoped_container/scoped_container.cc
         switcher/switcher.cc
         ustack/ustack.cc
         vstack/vstack.cc)
