started working on UIInputContext/IUIInputContext; started working on UIInputElement

--- a/Index/Include/Include_IndexUI/index_ui_impl/ui_input/CMakeLists.txt
+++ b/Index/Include/Include_IndexUI/index_ui_impl/ui_input/CMakeLists.txt
@@ -2,5 +2,7 @@ target_sources(IndexUIInclude PRIVATE
         include.cc
         ui.cc
 
+        context/context.cc
+        context/icontext.cc
         descriptor/descriptor.cc
         element/element.cc)
