--- a/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(IndexInclude PRIVATE
         math/math.cc
         memory/memory.cc
         nullable/nullable.cc
+        pair/pair.cc
         span/span.cc
         stack/stack.cc
         string/string.cc
