--- a/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
+++ b/Index/Include/Include_Index/index_impl/std/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(IndexInclude PRIVATE
         include.cc
+
+        chain/chain.cc
         func/func.cc
         limits/limits.cc
         math/math.cc
