moved Index::Memory as a separate part.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,12 @@ add_executable(IndexTest index.cc)
 target_compile_options(IndexTest PUBLIC "-fdeclspec" "-fms-extensions")
 
 # Include Dirs
-set(Index_IncludeDir "Index/Include/Include_Index/")
-set(IndexUI_IncludeDir "Index/Include/Include_IndexUI/")
+set(Index_IncludeDir "./Index/Include/Include_Index/")
+set(IndexMem_IncludeDir "./Index/Include/Include_IndexMem/")
+set(IndexUI_IncludeDir "./Index/Include/Include_IndexUI/")
 
 target_include_directories(IndexTest PUBLIC ${Index_IncludeDir})
+target_include_directories(IndexTest PUBLIC ${IndexMem_IncludeDir})
 target_include_directories(IndexTest PUBLIC ${IndexUI_IncludeDir})
 
 
