--- a/Index/Include/Include_IndexMem/index_mem_impl/memory/CMakeLists.txt
+++ b/Index/Include/Include_IndexMem/index_mem_impl/memory/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(IndexInclude PRIVATE
+target_sources(IndexMemInclude PRIVATE
         include.cc
         memory.cc
         multilevelptr.cc)
